# shaum

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
bindings/shaum_py/: Cargo.toml  pyproject.toml
bindings/shaum_py/src/: lib.rs
bindings/shaum_wasm/: Cargo.toml
bindings/shaum_wasm/src/: lib.rs
crates/shaum/: Cargo.toml
crates/shaum-astronomy/: Cargo.toml
crates/shaum-astronomy/src/: coords.rs  lib.rs  prayer.rs  visibility.rs
crates/shaum-calendar/: Cargo.toml
crates/shaum-calendar/src/: lib.rs
crates/shaum-network/: Cargo.toml
crates/shaum-network/src/: geo.rs  lib.rs
crates/shaum-rules/: Cargo.toml
crates/shaum-rules/src/: daud_util.rs  extension.rs  i18n.rs  lib.rs  macros.rs  query.rs  rules.rs
crates/shaum-types/src/: analysis.rs  error.rs  geo.rs  lib.rs  madhab.rs  prayer.rs  status.rs
crates/shaum/src/: lib.rs
crates/shaum_core/benches/: benchmark.rs
crates/shaum_core/src/: lib.rs
crates/shaum_core/tests/: astro_validation.rs  comprehensive_tests.rs  dx_tests.rs  macro_tests.rs  prayer_validation.rs  properties.rs
examples/: check_accuracy_today.rs  test_location.rs  test_reverse_geocode.rs
jsr-config/: jsr.json  mod.ts  types.ts
src/: calendar.rs  constants.rs  extension.rs  i18n.rs  lib.rs  macros.rs  query.rs  rules.rs  types.rs
src/astronomy/: coords.rs  elp2000.rs  mod.rs  prayer.rs  visibility.rs  vsop87.rs
src/network/: geo.rs  mod.rs
tests/: astro_validation.rs  comprehensive_tests.rs  dx_tests.rs  macro_tests.rs  prayer_validation.rs  properties.rs
xtask/src/: main.rs
