[package]
name = "shaum"
version = "0.3.0"
edition = "2024"
authors = ["Mohammad Farid Hendianto (IRedDragonICY)"]
description = "A Fiqh-compliant engine for determining Islamic fasting (Shaum) status. accurately identifies Wajib, Sunnah, Makruh, and Haram fasting days based on Hijri calendar rules."
license = "MIT"
repository = "https://github.com/IRedDragonICY/shaum"
homepage = "https://github.com/IRedDragonICY/shaum"
documentation = "https://docs.rs/shaum"
readme = "README.md"
keywords = ["islam", "fasting", "fiqh", "hijri", "calendar"]
categories = ["date-and-time", "localization", "no-std"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
hijri_date = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.11", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "benchmark"
harness = false
