[package]
name = "shaum"
version = "0.4.0"
edition = "2024"
authors = ["Mohammad Farid Hendianto (IRedDragonICY)"]
description = "A Fiqh-compliant engine for determining Islamic fasting (Shaum) status. accurately identifies Wajib, Sunnah, Makruh, and Haram fasting days based on Hijri calendar rules."
license = "MIT"
repository = "https://github.com/IRedDragonICY/shaum"
homepage = "https://github.com/IRedDragonICY/shaum"
documentation = "https://docs.rs/shaum"
readme = "README.md"
keywords = ["islam", "fasting", "fiqh", "hijri", "calendar"]
categories = ["date-and-time", "localization", "no-std"]

[features]
default = ["std", "default-lookup"]
std = ["chrono/std", "serde/std", "dep:thiserror"]
default-lookup = []
i18n = []
async = ["dep:async-trait"]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock"] }
hijri_date = "0.5.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
smallvec = { version = "1.11", features = ["serde", "union", "const_generics"] }
thiserror = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio = { version = "1", features = ["macros", "rt"] } # For async tests

[[bench]]
name = "benchmark"
harness = false
