[package]
name = "shaum"
version = "0.5.0"
edition = "2024"
authors = ["Mohammad Farid Hendianto (IRedDragonICY)"]
description = "A Fiqh-compliant engine for determining Islamic fasting (Shaum) status. accurately identifies Wajib, Sunnah, Makruh, and Haram fasting days based on Hijri calendar rules."
license = "MIT"
repository = "https://github.com/IRedDragonICY/shaum"
homepage = "https://github.com/IRedDragonICY/shaum"
documentation = "https://docs.rs/shaum"
readme = "README.md"
keywords = ["islam", "fasting", "fiqh", "hijri", "calendar"]
categories = ["date-and-time", "localization", "no-std"]

[features]
default = ["std", "default-lookup"]
std = ["chrono/std", "serde/std", "dep:thiserror"]
default-lookup = []
i18n = []
async = ["dep:async-trait", "dep:reqwest"]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock"] }
hijri_date = "0.5.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
smallvec = { version = "1.11", features = ["serde", "union", "const_generics"] }
thiserror = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
vsop87 = "3.0.0"
astro = "2.0.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] } # For async tests
wiremock = "0.6" # For mocking remote moon provider
serde_json = "1.0"

[[bench]]
name = "benchmark"
harness = false
