[package]
name = "shaum-astronomy"
description = "Prayer times and moon visibility calculations for shaum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
shaum-types = { path = "../shaum-types" }
chrono = { workspace = true }
vsop87 = { workspace = true }
astro = { workspace = true }
